--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
-html { 
+/* html { 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
+
+.background-cover {
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+} */
 
 /* default React App CSS below */
 
