--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,16 @@ html {
   min-Height: 100%;
 }
 
+.parent {
+  position: relative;
+}
+
+.child {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 /* default React App CSS below */
 
 /* .App {
